deploy/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/target: buskervezel.nl
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
  name: speedy-eboekhouden
spec:
  ingressClassName: traefik
  tls:
    - secretName: speedy-eboekhouden-nl-tls
      hosts:
        - speedy-eboekhouden.nl
  rules:
    - host: speedy-eboekhouden.nl
      http:
        paths:
          - backend:
              service:
                name: backend
                port:
                  number: 8080
            path: /api
            pathType: Prefix
          - backend:
              service:
                name: frontend
                port:
                  number: 80
            path: /app
            pathType: Prefix
          - backend:
              service:
                name: landing
                port:
                  number: 80
            path: /
            pathType: Prefix
